refactor(代码结构):3.0.0合并至2.0.0问题处理